<resources>
    <string name="app_name">FootballManager</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_activity_link">Already a member? Login</string>
    <string name="signup_activity_link">No account yet? Create one</string>
    <string name="action_sign_up">Signup</string>
    <string name="title_activity_main">FBManager</string>
    <string name="title_home">Home</string>
    <string name="title_create">Create</string>
    <string name="title_archive">Archive</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_create_tournament">CreateTournamentActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_particular_tournament_details">ParticularTournamentDetails</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_edit_fixture">EditFixture</string>
    <string name="title_activity_new_notification">NewNotificationActivity</string>
</resources>
